Aggiuto il lancio di Excel sulla vista dei risultati